--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,8 @@
 image: robertcnelson/debian-bullseye-slim-ti-linux-kernel-dev:latest
 
 build:
+  tags:
+    - docker-amd64
   stage: build
   script:
     - . version.sh && echo $BRANCH
@@ -10,7 +12,6 @@ build:
     - ccache -s
     - cp -v system.sh.sample system.sh
     - echo "AUTO_BUILD=1" >> system.sh
-    - echo "CORES=12" >> system.sh
     - ./build_deb.sh
     - ccache -s
     - tar -cf ccache-$BRANCH.tar.gz /root/.cache/ccache/
