scripts: resync all build scripts
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,6 +17,8 @@ build:
     - tar -cf ccache-$BRANCH.tar.gz /root/.cache/ccache/
     - cp -v ccache-$BRANCH.tar.gz /mnt/yocto-cache/ccache/ || true
   artifacts:
+    expire_in: 2 weeks
+    name: "$CI_PROJECT_NAME-$CI_COMMIT_BRANCH-$CI_JOB_ID"
     paths:
       - "deploy/linux-image-*.deb"
 
