scripts: resync all build scripts
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,12 +10,15 @@ build:
     - ccache -s
     - tar -xf /mnt/yocto-cache/ccache/ccache-$BRANCH.tar.gz -C / || true
     - ccache -s
+    - cp -v /mnt/yocto-cache/toolchain/*.tar.xz /root/dl/gcc/ || true
     - cp -v system.sh.sample system.sh
     - echo "AUTO_BUILD=1" >> system.sh
+    - echo "LINUX_GIT=/mnt/yocto-cache/git/linux-src/" >> system.sh
     - ./build_deb.sh
     - ccache -s
     - tar -cf ccache-$BRANCH.tar.gz /root/.cache/ccache/
     - cp -v ccache-$BRANCH.tar.gz /mnt/yocto-cache/ccache/ || true
+    - cp -uv /root/dl/gcc/*.tar.xz /mnt/yocto-cache/toolchain/ || true
   artifacts:
     paths:
       - "deploy/linux-image-*.deb"
