--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,6 +20,8 @@ build:
     - cp -v ccache-$BRANCH.tar.gz /mnt/yocto-cache/ccache/ || true
     - cp -uv /root/dl/gcc/*.tar.xz /mnt/yocto-cache/toolchain/ || true
   artifacts:
+    expire_in: 2 weeks
+    name: "$CI_PROJECT_NAME-$CI_COMMIT_BRANCH-$CI_JOB_ID"
     paths:
       - "deploy/linux-image-*.deb"
 
