--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,12 +15,13 @@ build:
     - echo "AUTO_BUILD=1" >> system.sh
     - echo "LINUX_GIT=/mnt/yocto-cache/git/linux-src/" >> system.sh
     - ./build_deb.sh
+    - du -sh deploy/linux-image-*.deb || true
     - ccache -s
     - tar -cf ccache-$BRANCH.tar.gz /root/.cache/ccache/
     - cp -v ccache-$BRANCH.tar.gz /mnt/yocto-cache/ccache/ || true
     - cp -uv /root/dl/gcc/*.tar.xz /mnt/yocto-cache/toolchain/ || true
   artifacts:
-    expire_in: 2 weeks
+    expire_in: 5 days
     name: "$CI_PROJECT_NAME-$CI_COMMIT_BRANCH-$CI_JOB_ID"
     paths:
       - "deploy/linux-image-*.deb"
