kernel v6.1.26-bone16.1 rebase external git projects BBDTBS: https://git.beagleboard.org/beagleboard/BeagleBoard-DeviceTrees/-/commit/2fcd9f69d6bbff2f6079adfa0a5ff26181e408cf AUFS: https://github.com/sfjro/aufs-standalone/commit/2049a4559234e81aa4f112396cab2304d3522bda WIRELESS_REGDB: https://git.kernel.org/pub/scm/linux/kernel/git/sforshee/wireless-regdb.git/commit/?id=43f81b4d0819ae1f9f6e31af7f563e9135aec9b6 TI_AMX3_CM3: http://git.ti.com/gitweb/?p=processor-firmware/ti-amx3-cm3-pm-firmware.git;a=commit;h=fb484c5e54f2e31cf0a338d2927a06a2870bcc2c WPANUSB: https://git.beagleboard.org/beagleconnect/linux/wpanusb/-/commit/6aa9bf65b9d88a2c9a111e7b4aed03de2be9413d BCFSERIAL: https://git.beagleboard.org/beagleconnect/linux/bcfserial/-/commit/db467023bd136c97c2e13c3a8b9e41dbdfafbc66
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,10 @@
 image: robertcnelson/debian-bullseye-slim-ti-linux-kernel-dev:latest
 
 cache:
-  key: "am33x-v6.1"
+  key: "$CI_PROJECT_NAME-$CI_COMMIT_BRANCH"
   paths:
     - dl
-    - ccache-am33x-v6.1.tar.gz
+    - ccache-$CI_PROJECT_NAME-$CI_COMMIT_BRANCH.tar.gz
 
 build:
   tags:
@@ -14,7 +14,7 @@ build:
     - . version.sh && echo $BRANCH
     - mkdir -p /root/.cache/ccache/ || true
     - ccache -s
-    - tar -xf ccache-$BRANCH.tar.gz -C / || true
+    - tar -xf ccache-$CI_PROJECT_NAME-$CI_COMMIT_BRANCH.tar.gz -C / || true
     - ccache -s
     - cp -v system.sh.sample system.sh
     - echo "AUTO_BUILD=1" >> system.sh
@@ -23,7 +23,7 @@ build:
     - ./build_deb.sh
     - du -sh deploy/linux-image-*.deb || true
     - ccache -s
-    - tar -cf ccache-$BRANCH.tar.gz /root/.cache/ccache/
+    - tar -cf ccache-$CI_PROJECT_NAME-$CI_COMMIT_BRANCH.tar.gz /root/.cache/ccache/
   artifacts:
     expire_in: 5 days
     name: "$CI_PROJECT_NAME-$CI_COMMIT_BRANCH-$CI_JOB_ID"
