kernel v4.19.255-bone-rt-r75.3 rebase external git projects and rt: v4.19.255-rt114 BBDTBS: https://git.beagleboard.org/beagleboard/BeagleBoard-DeviceTrees/-/commit/a34d721dc050dbd882ad08c045f5c2443ce9b5d5 RT: patch-4.19.255-rt114.patch.xz AUFS: https://github.com/sfjro/aufs4-standalone/commit/1bb4caf8d7ee47acc49f05deb4da9d34884c44b2 WIRELESS_REGDB: https://git.kernel.org/pub/scm/linux/kernel/git/sforshee/wireless-regdb.git/commit/?id=43f81b4d0819ae1f9f6e31af7f563e9135aec9b6 TI_AMX3_CM3: http://git.ti.com/gitweb/?p=processor-firmware/ti-amx3-cm3-pm-firmware.git;a=commit;h=fb484c5e54f2e31cf0a338d2927a06a2870bcc2c CAN-ISOTP: https://github.com/hartkopp/can-isotp/commit/7626d0a0707391970080d493ce69638719938da7
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/patches/ref_omap2plus_defconfig
+++ b/patches/ref_omap2plus_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 4.19.246 Kernel Configuration
+# Linux/arm 4.19.255 Kernel Configuration
 #
 
 #
@@ -2314,6 +2314,7 @@ CONFIG_HW_RANDOM_OMAP3_ROM=m
 # CONFIG_TCG_TPM is not set
 CONFIG_DEVPORT=y
 # CONFIG_XILLYBUS is not set
+CONFIG_RANDOM_TRUST_BOOTLOADER=y
 
 #
 # I2C support
